--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -381,6 +381,7 @@ plugins:                          # plugin list (sorted by priority)
   - udp-logger                     # priority: 400
   #- log-rotate                    # priority: 100
   # <- recommend to use priority (0, 100) for your custom plugins
+  - third-plugin                           # priority: 1
   - example-plugin                 # priority: 0
   #- skywalking                    # priority: -1100
   - aws-lambda                     # priority: -1899
@@ -407,9 +408,9 @@ plugin_attr:
     max_kept: 168     # max number of log files will be kept
     enable_compression: false    # enable log file compression(gzip) or not, default false
   skywalking:
-    service_name: APISIX
-    service_instance_name: APISIX Instance Name
-    endpoint_addr: http://127.0.0.1:12800
+    service_name: dev-APISIX
+    service_instance_name: dev-APISIX Instance Name
+    endpoint_addr: http://10.193.64.247:12800
   prometheus:
     export_uri: /apisix/prometheus/metrics
     metric_prefix: apisix_
@@ -430,4 +431,3 @@ plugin_attr:
       sequence_bits: 10               # each machine generates a maximum of (1 << sequence_bits) serial numbers per millisecond
       data_machine_ttl: 30            # live time for data_machine in etcd (unit: second)
       data_machine_interval: 10       # lease renewal interval in etcd (unit: second)
-
